--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
-title:              Moon
-bio:                'Minimal, one column jekyll theme.'
-description:        "Moon is a minimal, one column jekyll theme for your blog."
+title:              Brenda Hunter
+bio:                'Hammered Dulcimer'
+description:        "Brenda Hunter plays hammered dulcimer with uncommon precision, flair, and beauty. Her skilful arrangements of traditional Irish and old time folk music reveal the eclectic influences of jazz, rock, and the classics. She performs—solo and with her band—and she teaches. This is the place to learn more about Brenda and her music! Welcome!"
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
